clusters/talos-cluster/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  namespace: n8n
  labels:
    app: n8n-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: n8n-deployment
  template:
    metadata:
      name: n8n-deployment
      labels:
        app: n8n-deployment
    spec:
      restartPolicy: Always
      containers:
        - command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          image: n8nio/n8n
          name: n8n
          ports:
            - containerPort: 5678
              name: n8n-tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-data
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
